Add index.html, index.js, and styles.css
Removed buttons, corrected the about section paragraphs. Fixed the text align of the section paragraph.

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ body, html {
     height: fit-content;
     justify-content: center;
     margin: 0;
+    margin-bottom: 1rem;
     padding: 0;
 }
 
@@ -426,8 +427,9 @@ footer {
     .section-paragraph {
         align-self: center;
         justify-self: center;
-        width: 75%;
         max-width: none;
+        text-align: center;
+        width: 75%;
     }
 
     .empty-section {
