--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body, html {
 
 .nav-link::after {
     background-color: white;
-    bottom: -0.2rem;
+    bottom: 5px;
     content: "";
     height: 3px;
     left: 0;
