--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ body, html {
     height: fit-content;
     justify-content: flex-start;
     margin-bottom: 0;
-    margin-top: 102px;
+    margin-top: 20%;
     padding: 0;
     width: fit-content;
 }
@@ -299,7 +299,7 @@ body, html {
     align-items: center;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     height: auto;
     padding-top: 2rem;
     position: relative;
@@ -320,7 +320,7 @@ body, html {
     align-items: center;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     margin-top: 6rem;
     position: relative;
 }
